tests/cmp/parseerror-val-after-in.golden
tests/cmp/parseerror-val-after-in.trp:4:5: parse error
  (while parsing let expression body)
  4 | in  val z = 3
    |     ^
  unexpected keyword 'val'
  expected expression

Suggestion: 'val' can only appear in let declarations (before 'in').
  Either move this declaration before 'in', or just write the expression directly.

